# pq-newhope

./: .gitmodules  Cargo.toml  build.rs
benches/: key_agreement.rs
src/: cca.rs  coefficient.rs  cpa.rs  hash.rs  kem.rs  lib.rs  message.rs  pke.rs  poly.rs  test.rs  tests.rs  traits.rs
src/pke/: coefficient.rs  mod.rs  poly.rs
src/poly/: coefficient.rs  mod.rs  poly.rs  tables.rs
src/pure/: kem.rs  mod.rs  poly.rs
src/wrapper/: keys.rs  mod.rs  sizes.rs  sys.rs
