[package]
name = "pq-newhope"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
description = "NewHope is a key-exchange protocol based on the Ring-Learning-with-Errors (Ring-LWE) problem, which was submitted to the NIST post-quantum crypto project. "
license = "MIT"
repository = "https://github.com/vlad9486/pq-newhope"

[dependencies]
generic-array = "0.14"
sha3 = "0.8"
num-bigint = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.7"

[features]
smallest = ["num-bigint", "num-traits"]
