[package]
name = "pq-newhope"
version = "0.4.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
description = "NewHope is a key-exchange protocol based on the Ring-Learning-with-Errors (Ring-LWE) problem, which was submitted to the NIST post-quantum crypto project. "
license = "MIT"
repository = "https://github.com/vlad9486/pq-newhope"

[dependencies]
pq-kem = "0.3"
rac = "1.1"
sha3 = "0.9"
keccak = "0.1"
num-bigint = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
rand = { version = "0.7", features = ["wasm-bindgen"] }
wasm-bindgen-test = "0.3"
criterion = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "key_agreement"
harness = false

[features]
smallest = ["num-bigint", "num-traits"]
